--- a/boostrapCapstone/index.html
+++ b/boostrapCapstone/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <p>
+    <p class="test">
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore
       eligendi cum quibusdam asperiores eos nihil numquam, voluptatibus nobis
       maiores possimus tempore, tempora sapiente ratione quas autem fuga.
